# oz-doc-processor

./: .env.example  .gitignore  README.md  address_data_fetcher.py  convert_stage.py  excel_processor.py  extract_stage.py  gemini_processor.py  main.py  mistral_ocr.py  orchestrate_pipeline.py  orchestrator.py  pipeline.py  process_listing.py  pyproject.toml  run_area_summary_ocr.py  run_modular_pipeline.py  test_output.txt
analyze_qozb_contacts/: audit_qozb_contact_completeness.py  audit_qozb_cross_role_overlap.py  audit_qozb_emails.py  audit_qozb_entities.py  audit_qozb_entity_consistency.py  audit_qozb_people_duplicates.py  audit_qozb_phones.py  check_orphan_property_phones.py  contact_completeness_report.md  cross_role_overlap_report.md  emails_report.md  entities_report.md  entity_consistency_report.md  import_qozb_to_crm.py  orphan_phones_report.md  people_duplicates_report.md  phones_aggregation_report.md
contact_merge_scripts/: audit_all_emails.py  audit_company_overlap.py  audit_contacts_for_crm_migration.py  audit_email_list_overlap.py  audit_family_office_for_crm_import.py  check_company_email.py  check_duplicate_contacts.py  check_duplicate_linkedin.py  check_superset.py  company_overlap_report.md  contacts_migration_analysis_report.md  contacts_to_people_mapping.json  count_companies.py  data_analysis_summary.md  email_list_overlap_report.md  family_office_crm_import_analysis.md  find_fuzzy_duplicate_firms.py  import_contacts_to_crm.py  import_family_office_to_crm.py  perform_merge.py  resolve_conflicting_emails.py
docs/: api-testing.md  external-api.md  (+3 more)
(+33 files in other folders)
